[gd_scene format=3 uid="uid://cyfahs00irlc1"]

[ext_resource type="Script" uid="uid://lseoamfiwkv7" path="res://power_up.gd" id="1_asnu2"]
[ext_resource type="Texture2D" uid="uid://crriyoms6xdt4" path="res://art/playerGrey_walk2.png" id="1_hirvy"]
[ext_resource type="PackedScene" uid="uid://kxjn44mfpfa3" path="res://sound/tiny_sound.res" id="3_h1prs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_asnu2"]
radius = 19.0
height = 38.0

[node name="PowerUp" type="StaticBody2D" unique_id=1098608039 groups=["power_ups"]]
collision_layer = 4
script = ExtResource("1_asnu2")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=107491227]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_hirvy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1169471588]
shape = SubResource("CapsuleShape2D_asnu2")

[node name="PowerUpAppearsSound" parent="." unique_id=1868462262 instance=ExtResource("3_h1prs")]

[node name="PowerUpTimer" type="Timer" parent="." unique_id=285762249 groups=["power_ups"]]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
